update JDK and libraries